package com.fredodev.riee.treatment.domain.entity;

public class DentalPieceEntity {
}
